Harden CORS and move local secrets